--- a/libs/scc/Cargo.toml
+++ b/libs/scc/Cargo.toml
@@ -1,15 +1,9 @@
 [package]
-name = "python-gc"
+name = "scc"
 version = "0.1.0"
 authors = ["Martin Karlgren <martin@karlgren.me>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-[workspace]
-
-[dependencies.scc]
-path = "libs/scc"
-
 [dependencies]
-pyo3 = "0.7"
